# macos-siri-2.0

./: .gitignore  AGENT3_DELIVERY_SUMMARY.md  AGENT3_QUICK_REFERENCE.md  AGENT_2_DELIVERABLES.txt  AGENT_4_SUMMARY.md  AGENT_5_DELIVERY_SUMMARY.md  AGENT_7_SUMMARY.md  BUILD_GUIDE.md  BUILD_VERIFICATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_DELIVERABLES.md  ENHANCED_TEXT_OPERATIONS_SUMMARY.md  FINAL_PROJECT_SUMMARY.md  INLINE_AI_FEATURE.md  INLINE_AI_RELEASE_CHECKLIST.md  INSTALLATION.md  INTEGRATION_TEST_DELIVERABLES.md  LICENSE  LLM_MODULE_COMPLETE.txt  NEXT_STEPS.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  install.sh  run.sh  uninstall.sh
.github/: WORKFLOWS_README.md
docs/: CLAUDE_API_SETUP.md  INLINE_AI_ACCESSIBILITY.md  INLINE_AI_COMPATIBILITY.md  INLINE_AI_TUTORIAL_SCRIPT.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
examples/: inline_ai_demo.py
python-service/: AGENT_2_SUMMARY.md  AGENT_6_SUMMARY.md  ARCHITECTURE.txt  INLINE_AI_IMPLEMENTATION_SUMMARY.md  INLINE_AI_QUICK_REFERENCE.md  ORCHESTRATION.md  README_STT.md  TESTING_GUIDE.md  TEST_REPORT.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt
python-service/docs/: AGENT3_INTEGRATION_NOTES.md  AGENT5_MCP_INTEGRATION_GUIDE.md  AGENT5_QUICK_REFERENCE.md  MCP_TOOLS_REFERENCE.md
python-service/examples/: audio_pipeline_demo.py  llm_example.py  orchestrator_example.py  stt_example.py
python-service/scripts/: run_tests.py  run_tests.sh
python-service/src/voice_assistant/: __init__.py  errors.py  main.py  metrics.py  orchestrator.py  pipeline.py  state.py  tts.py
python-service/src/voice_assistant/audio/: INTEGRATION_GUIDE.md  README.md  __init__.py  audio_buffer.py  audio_pipeline.py  device_manager.py  vad.py  wake_word.py
python-service/src/voice_assistant/inline_ai/: __init__.py  composer.py  formatter.py  metrics.py  prompts.py  proofreader.py  rewriter.py  summarizer.py
python-service/src/voice_assistant/llm/: ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  __init__.py  base.py  context.py  factory.py
python-service/src/voice_assistant/llm/providers/: __init__.py  anthropic.py  local_gpt_oss.py  openai.py  openrouter.py
python-service/src/voice_assistant/mcp/: __init__.py  server.py  validation.py
python-service/src/voice_assistant/mcp/tools/: __init__.py  accessibility.py  applescript.py  files.py  messages.py  system.py
python-service/src/voice_assistant/stt/: IMPLEMENTATION_SUMMARY.md  __init__.py  audio_processor.py  model_manager.py  whisper_client.py
python-service/tests/: __init__.py  conftest.py  test_basic.py
python-service/tests/audio/: __init__.py  test_audio_buffer.py  test_integration.py  test_wake_word.py
python-service/tests/fixtures/: __init__.py  audio_fixtures.py  inline_ai_samples.py  mock_data.py
python-service/tests/fixtures/audio/: command_01_open_safari.txt  command_02_send_a_message_to_jo.txt  command_04_search_for_machine_l.txt  command_05_create_a_new_file_ca.txt  command_07_set_a_timer_for_5_mi.txt  command_08_what's_on_my_calenda.txt  command_09_play_some_music.txt  full_00_wakeword_plus_command.txt  full_01_wakeword_plus_command.txt  full_02_wakeword_plus_command.txt  full_03_wakeword_plus_command.txt  full_04_wakeword_plus_command.txt
python-service/tests/inline_ai/: __init__.py  test_composer.py  test_formatter.py  test_proofreader.py  test_rewriter.py  test_summarizer.py
python-service/tests/integration/: __init__.py  test_edge_cases.py  test_inline_ai_full.py  test_performance.py  test_pipeline.py  test_workflows.py
python-service/tests/llm/: test_context.py  test_factory.py  test_providers.py
python-service/tests/mcp/: __init__.py  test_server.py  test_tools.py  test_validation.py
python-service/tests/performance/: test_inline_ai_performance.py
python-service/tests/stt/: __init__.py  test_audio_processor.py  test_model_manager.py  test_whisper_client.py
scripts/: build_dmg.sh  build_pkg.sh  setup_whisper.sh  uninstall.sh  verify_build.sh
swift-app/: .gitignore  IMPLEMENTATION_SUMMARY.md  Info.plist  PROJECT_OVERVIEW.md  Package.swift  QUICK_START.md  README.md  XCODE_SETUP.md
swift-app/Resources/Assets.xcassets/: README.md
swift-app/Sources/App/: AppDelegate.swift  MenuBarController.swift  PreferencesWindow.swift  main.swift
swift-app/Sources/IPC/: PythonService.swift
swift-app/Sources/Models/: Configuration.swift
swift-app/Sources/Permissions/: PermissionManager.swift
swift-app/Sources/TextSelection/: DiffView.swift  EditableTextSection.swift  EnhancedFloatingPanel.swift  EnhancedUIPreviews.swift  FloatingPanel.swift  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  InlineAIController.swift  LoadingOverlay.swift  MenuOption.swift  README.md  README_ENHANCED_UI.md  ResultPreviewPanel.swift  SelectionButton.swift  SelectionExtractor.swift  SelectionMonitor.swift  TextReplacer.swift  UI_LAYOUT_REFERENCE.md
swift-app/Tests/VoiceAssistantTests/: ConfigurationTests.swift  EnhancedFloatingPanelTests.swift  EnhancedInlineAITests.swift  EnhancedTextOperationsTests.swift  InlineAITests.swift  MenuOptionTests.swift  PermissionManagerTests.swift  SelectionButtonTests.swift
